--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script>
         const owner = 'ArxivPodcastGPT';
         const repo = 'ArxivPodcastGPT.github.io';
-        const apiEndpoint = `https://api.github.com/repos/${owner}/${repo}/git/trees/master?recursive=1`;
+        const apiEndpoint = `https://api.github.com/repos/${owner}/${repo}/git/trees/main?recursive=1`;
 
         // Fetch the file and directory data from the GitHub API
         fetch(apiEndpoint)
