--- a/index.html
+++ b/index.html
@@ -4,38 +4,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>File Directory</title>
+    <title>Podcast Directory</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+
+        h1, h2, h3 {
+            margin: 0;
+        }
+
+        #podcast-list {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            margin: 20px;
+        }
+
+        .podcast {
+            background-color: #fff;
+            box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            margin: 20px;
+            max-width: 300px;
+        }
+
+        .podcast h2 {
+            margin-bottom: 10px;
+        }
+
+        .podcast ul {
+            list-style: none;
+            padding-left: 0;
+        }
+
+        .podcast ul li {
+            margin-bottom: 5px;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>File Directory</h1>
-    <ul id="file-list"></ul>
+    <h1>Podcast Directory</h1>
+    <div id="podcast-list"></div>
 
     <script>
+
         const owner = 'ArxivPodcastGPT';
         const repo = 'ArxivPodcastGPT.github.io';
-        const apiEndpoint = `https://api.github.com/repos/${owner}/${repo}/git/trees/main?recursive=1`;
+        const branch = 'main';
+        const apiEndpoint = `https://api.github.com/repos/${owner}/${repo}/git/trees/${branch}?recursive=1`;
 
-        // Fetch the file and directory data from the GitHub API
+        // Fetch the file data from the GitHub API
         fetch(apiEndpoint)
-            .then(response => response.json())
-            .then(data => {
-                const fileListElement = document.getElementById('file-list');
-                
-                // Filter out the directories, only showing files
-                const files = data.tree.filter(item => item.type === 'blob');
+        .then(response => response.json())
+        .then(data => {
+            const podcastListElement = document.getElementById('podcast-list');
 
-                // Populate the file list
-                files.forEach(file => {
-                    const listItem = document.createElement('li');
-                    const link = document.createElement('a');
-                    link.href = `${file.path}`;
-                    link.textContent = file.path;
-                    listItem.appendChild(link);
-                    fileListElement.appendChild(listItem);
+            // Filter out the directories, only showing xml files
+            const xmlFiles = data.tree.filter(item => item.type === 'blob' && item.path.endsWith('.xml'));
+
+            // Fetch and display each podcast xml
+            xmlFiles.forEach(file => {
+                fetch(`https://github.com/${owner}/${repo}/raw/${branch}/${file.path}`)
+                .then(response => response.text())
+                .then(xmlText => {
+                    const parser = new DOMParser();
+                    const xmlDoc = parser.parseFromString(xmlText, "text/xml");
+
+                    const title = xmlDoc.querySelector('channel > title').textContent;
+                    const description = xmlDoc.querySelector('channel > description').textContent;
+                    const episodes = xmlDoc.querySelectorAll('item');
+
+                    const podcastElement = document.createElement('div');
+                    podcastElement.className = 'podcast';
+                    podcastElement.innerHTML = `
+                        <h2>${title}</h2>
+                        <p>${description}</p>
+                        <h3>Recent Episodes:</h3>
+                        <ul>
+                            ${Array.from(episodes).slice(0, 3).map(episode => `<li>${episode.querySelector('title').textContent}</li>`).join('')}
+                        </ul>
+                    `;
+
+                    podcastListElement.appendChild(podcastElement);
                 });
-            })
-            .catch(error => console.error('Error fetching the file list:', error));
+            });
+        })
+        .catch(error => console.error('Error fetching the file list:', error));
     </script>
 </body>
 
