--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Podcast Directory</title>
+    <title>File Directory</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -19,14 +19,14 @@
             margin: 0;
         }
 
-        #podcast-list {
+        #file-list {
             display: flex;
             flex-wrap: wrap;
             justify-content: space-around;
             margin: 20px;
         }
 
-        .podcast {
+        .file {
             background-color: #fff;
             box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
             padding: 20px;
@@ -34,24 +34,24 @@
             max-width: 300px;
         }
 
-        .podcast h2 {
+        .file h2 {
             margin-bottom: 10px;
         }
 
-        .podcast ul {
+        .file ul {
             list-style: none;
             padding-left: 0;
         }
 
-        .podcast ul li {
+        .file ul li {
             margin-bottom: 5px;
         }
     </style>
 </head>
 
 <body>
-    <h1>Podcast Directory</h1>
-    <div id="podcast-list"></div>
+    <h1>File Directory</h1>
+    <div id="file-list"></div>
 
     <script>
 
@@ -62,41 +62,24 @@
 
         // Fetch the file data from the GitHub API
         fetch(apiEndpoint)
-        .then(response => response.json())
-        .then(data => {
-            const podcastListElement = document.getElementById('podcast-list');
+            .then(response => response.json())
+            .then(data => {
+                const fileListElement = document.getElementById('file-list');
 
-            // Filter out the directories, only showing xml files
-            const xmlFiles = data.tree.filter(item => item.type === 'blob' && item.path.endsWith('.xml'));
+                // Filter out the directories, only showing files
+                const files = data.tree.filter(item => item.type === 'blob');
 
-            // Fetch and display each podcast xml
-            xmlFiles.forEach(file => {
-                fetch(`https://github.com/${owner}/${repo}/raw/${branch}/${file.path}`)
-                .then(response => response.text())
-                .then(xmlText => {
-                    const parser = new DOMParser();
-                    const xmlDoc = parser.parseFromString(xmlText, "text/xml");
-
-                    const title = xmlDoc.querySelector('channel > title').textContent;
-                    const description = xmlDoc.querySelector('channel > description').textContent;
-                    const episodes = xmlDoc.querySelectorAll('item');
-
-                    const podcastElement = document.createElement('div');
-                    podcastElement.className = 'podcast';
-                    podcastElement.innerHTML = `
-                        <h2>${title}</h2>
-                        <p>${description}</p>
-                        <h3>Recent Episodes:</h3>
-                        <ul>
-                            ${Array.from(episodes).slice(0, 3).map(episode => `<li>${episode.querySelector('title').textContent}</li>`).join('')}
-                        </ul>
-                    `;
-
-                    podcastListElement.appendChild(podcastElement);
+                // Populate the file list
+                files.forEach(file => {
+                    const listItem = document.createElement('li');
+                    const link = document.createElement('a');
+                    link.href = `${file.path}`;
+                    link.textContent = file.path;
+                    listItem.appendChild(link);
+                    fileListElement.appendChild(listItem);
                 });
-            });
-        })
-        .catch(error => console.error('Error fetching the file list:', error));
+            })
+            .catch(error => console.error('Error fetching the file list:', error));
     </script>
 </body>
 
