--- a/index.html
+++ b/index.html
@@ -3,83 +3,90 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>File Directory</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
+        * {
+            box-sizing: border-box;
         }
 
-        h1, h2, h3 {
+        body, html {
             margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
         }
 
         #file-list {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            margin: 20px;
+            list-style-type: none;
+            padding: 0;
         }
 
-        .file {
+        #file-list li {
             background-color: #fff;
-            box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            margin: 20px;
-            max-width: 300px;
+            padding: 15px;
+            margin: 10px 0;
+            border-radius: 4px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
-        .file h2 {
-            margin-bottom: 10px;
+        #file-list li a {
+            text-decoration: none;
+            color: #333;
+            font-size: 16px;
         }
 
-        .file ul {
-            list-style: none;
-            padding-left: 0;
-        }
-
-        .file ul li {
-            margin-bottom: 5px;
+        h1 {
+            text-align: center;
+            margin-top: 20px;
         }
     </style>
 </head>
 
 <body>
-    <h1>File Directory</h1>
-    <div id="file-list"></div>
+    <div class="container">
+        <h1>File Directory</h1>
+        <ul id="file-list"></ul>
+    </div>
 
     <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const owner = 'ArxivPodcastGPT';
+            const repo = 'ArxivPodcastGPT.github.io';
+            const branch = 'main';
+            const apiEndpoint = `https://api.github.com/repos/${owner}/${repo}/git/trees/${branch}?recursive=1`;
 
-        const owner = 'ArxivPodcastGPT';
-        const repo = 'ArxivPodcastGPT.github.io';
-        const branch = 'main';
-        const apiEndpoint = `https://api.github.com/repos/${owner}/${repo}/git/trees/${branch}?recursive=1`;
+            // Fetch the file data from the GitHub API
+            fetch(apiEndpoint)
+                .then(response => response.json())
+                .then(data => {
+                    const fileListElement = document.getElementById('file-list');
 
-        // Fetch the file data from the GitHub API
-        fetch(apiEndpoint)
-            .then(response => response.json())
-            .then(data => {
-                const fileListElement = document.getElementById('file-list');
+                    // Filter out the directories, only showing files
+                    const files = data.tree.filter(item => item.type === 'blob');
 
-                // Filter out the directories, only showing files
-                const files = data.tree.filter(item => item.type === 'blob');
-
-                // Populate the file list
-                files.forEach(file => {
-                    const listItem = document.createElement('li');
-                    const link = document.createElement('a');
-                    link.href = `${file.path}`;
-                    link.textContent = file.path;
-                    listItem.appendChild(link);
-                    fileListElement.appendChild(listItem);
-                });
-            })
-            .catch(error => console.error('Error fetching the file list:', error));
+                    // Populate the file list
+                    files.forEach(file => {
+                        fileListElement.innerHTML += `
+                            <li>
+                                <a href="${file.path}" target="_blank">
+                                    ${file.path}
+                                </a>
+                            </li>
+                        `;
+                    });
+                })
+                .catch(error => console.error('Error fetching the file list:', error));
+        });
     </script>
 </body>
 
